--- a/org/2020-05-22-japanese.org
+++ b/org/2020-05-22-japanese.org
@@ -9,7 +9,7 @@
 *** 片假名
 来源楷书的偏旁，形容外来语，拟声拟态词，动植物名称(现实情况不一定遵守)
 ** 罗马字
-类似于中文拼音的英文标注，用于输入法等用途
+类似于中文拼音的英文标注，用于外来人士学习，与输入法等用途
 * grammer
 ** sentence
 *** 肯定句
@@ -71,7 +71,7 @@ person1 に　会います
 *** 形容词
 一类形直接加名词
 二类结尾的た改な在接名词
-** word
+** other
 *** 人称
 **** 第一人称
 normal: 私(わたし)
@@ -181,6 +181,7 @@ eg:
 **** 时间频率
 *** 变形
 **** 动词
+***** 词态
 | 时态      |        | 肯定   | 否定         |
 |-----------+--------+--------+--------------|
 | 现在/未来 | 礼貌体 | ます   | ません       |
@@ -189,6 +190,40 @@ eg:
 | 过去      | 礼貌体 | ました | ませんですた |
 |           | 简体   | た形   | ~なかつた    |
 |-----------+--------+--------+--------------|
+***** 动词类型
+|        | 条件                    | 变形规则                      |
+|--------+-------------------------+-------------------------------|
+| 第一类 | 词尾在う段              | 词尾变为第二段+词态的变形规则 |
+|--------+-------------------------+-------------------------------|
+| 第二类 | 词尾为る且前一个为2/4段 | 去掉词尾+词态变形规则       |
+|--------+-------------------------+-------------------------------|
+| 第三类 | する                    | します                        |
+|        | 来る(くる)              | 来ます(きます)                |
+|--------+-------------------------+-------------------------------|
+***** て形
+|------------------+------------------+---------|
+| 一类动词（原型） | 一类动词（ます） | て形    |
+|------------------+------------------+---------|
+| ~く              | ~きます          | ~いて   |
+| ~で              | ~ぎます          | ~いで   |
+| ~す              | ~します          | ~して   |
+| ~う、つ、る      | ~い、ち、ります  | ~って   |
+| ~ぶぬ            | ~び、み、にます  | ~んで   |
+| ~行く            | 行きます         | ~行って |
+|------------------+------------------+---------|
+
+|------------------+------------------+------|
+| 二类动词（原型） | 二类动词（ます） | て形 |
+|------------------+------------------+------|
+| ~る              | ~ます            | ~て  |
+|------------------+------------------+------|
+
+|----------------+----------------+------|
+| 三类动词(原形) | 三类动词(ます) | て形 |
+|----------------+----------------+------|
+| する           | します         | して |
+| 来る           | 来ます         | 来て |
+|----------------+----------------+------|
 **** 名词
 | 时态      |        | 肯定   | 否定                 |
 |-----------+--------+--------+----------------------|
@@ -198,16 +233,6 @@ eg:
 | 过去      | 礼貌体 | でした | ではありませんでした |
 |           | 简体   | だつた | じやなかつた         |
 |-----------+--------+--------+----------------------|
-**** 动词类型
-|        | 条件                    | 变形规则                      |
-|--------+-------------------------+-------------------------------|
-| 第一类 | 词尾在う段              | 词尾变为第二段+动词的变形规则 |
-|--------+-------------------------+-------------------------------|
-| 第二类 | 词尾为る且前一个为2/4段 | 去掉词尾+动词变形规则         |
-|--------+-------------------------+-------------------------------|
-| 第三类 | する                    | します                        |
-|        | 来る(くる)              | 来ます(きます)                |
-|--------+-------------------------+-------------------------------|
 **** 形容词
 ***** 一类
 いい/よい 都是表示好的意思，但是变形使用只能拿第二个来进行变形
@@ -215,7 +240,24 @@ eg:
 | 现在/将来 | ~い     | ~くない     |
 | 过去      | ~かつた | ~くなかつた |
 ***** 二类
+以だ结尾
 变化时去掉尾部+名词的变形串
+***** て形
+|------------+----------|
+| 一类形容词 | て形     |
+|------------+----------|
+| 明るい     | 明るくて |
+| 新しい     | 新しくて |
+|------------+----------|
+
+|------------+------------|
+| 二类形容词 | て形       |
+|------------+------------|
+| 簡單       | かんたんで |
+| 親切       | しんせつで |
+| にぎやか   | にぎやかで |
+|------------+------------|
+
 *** と
 noun と noun => noun and noun
 *** か
@@ -230,6 +272,58 @@ noun or noun
 ところで => 话说
 **** 累加
 さして => 而且
+*** 量词
+一般1,6,8,10加゜，3和疑问词加゛
+**** 一般物件,1-9岁，抽象物
+| 日本汉字 | 假名     |
+|----------+----------|
+| 一つ     | ひとつ   |
+| 二つ     | ふたつ   |
+| 三つ     | みっつ   |
+| 四つ     | よっつ   |
+| 五つ     | いつつ   |
+| 六つ     | むっつ   |
+| 七つ     | ななつ   |
+| 八つ     | やっつ   |
+| 九つ     | ここのつ |
+| 十       | とお     |
+| 幾つ     | いくつ      |
+**** 人数
+| 日本汉字 | 假名       |
+|----------+------------|
+| 一人     | ひとり     |
+| 二人     | ふたり     |
+| 三人     | さんにん   |
+| 四人     | よんにん   |
+| 五人     | ごにん     |
+| 六人     | ろくにん   |
+| 七人     | ななにん   |
+| 八人     | はちにん   |
+| 九人     | きょうにん |
+| 十人     | じゅうにん |
+| 何人     | なんにん   |
+**** 电器、机械
+数字+だい
+**** 鸡蛋、水果
+除了1，6，8，10不规则,需要促音，其他均为规则数字+こ
+| 日本汉字 | 假名     |
+|----------+----------|
+| 一個     | いっこ   |
+| 六個     | ろっこ   |
+| 八個     | はっこ   |
+| 十個     | じゅっこ |
+**** 细长物品（~支、瓶、条、根）
+除了列出的不规则，其他均为数字+ほん
+| 日本汉字 | 假名       |
+|----------+------------|
+| 一本     | いっぽん   |
+| 三本     | さんぼん   |
+| 六本     | ろっぽん   |
+| 八本     | はっぽん   |
+| 十本     | じゅっぽん |
+| 何本     | なんぼん  |
+**** 杯具（~杯）
+通用尾部为はい，变形规则于细长物品完全一致
 ** 省略做法
 *** 主语省略
 根据语境省掉主语，类似于中文
