--- a/org/2020-06-22-java-env.org
+++ b/org/2020-06-22-java-env.org
@@ -109,3 +109,6 @@ excel
 * Micrometer
 ** reference
 https://www.ibm.com/developerworks/cn/java/j-using-micrometer-to-record-java-metric/index.html
+* test
+** junit
+** testng
