--- a/org/2019-12-30-gradle.org
+++ b/org/2019-12-30-gradle.org
@@ -123,6 +123,9 @@ gretty {
 ***** remote debug port
 5005
 task: appRunDebug
+**** debug
+appStartDebug
+idea remote debug
 ** 插件编写
 *** 构建逻辑的复用
 // 可能需要根据语法进行改正
@@ -165,4 +168,6 @@ def VERSION = "5.1.8.RELEASE"
 引用变量
 eg:
 compile group: 'org.springframework.security', name: 'spring-security-config', version: "$VERSION"
-
+* other
+** idea创建gradle web不带web.xml
+File -> Project Structure -> facets -> Deployment Descriptors -> + -> web.xml(设置好路径就会自动创建)
