--- a/org/2020-05-28-todo.org
+++ b/org/2020-05-28-todo.org
@@ -1,15 +1,18 @@
 #+TITLE: to do list
 #+STARTUP: indent
-* TODO Java学习[0/9]
+* TODO Java学习[1/9]
 ** TODO Stream原理
 ** TODO Spring原理
 ** TODO bootstrap基础
 ** TODO es索引结构
-** TODO Mybatis原理
+** DONE Mybatis原理
+CLOSED: [2020-06-30 Tue 16:46]
+- State "DONE"       from "TODO"       [2020-06-30 Tue 16:46]
 ** TODO MySQL索引结构
 ** TODO hikaricp连接池原理
 ** TODO groovy基础
 ** TODO Java.Concurrency.in.Practice深入
+** 
 * TODO 素养[2020-06-30 Tue]
 ** TCP IP[0/3]
 *** TODO 1
@@ -17,7 +20,3 @@
 *** TODO 3
 ** TODO HTTP The Definitive Guide
 * TODO leetcode刷题[2020-06-30 Tue]
-* TODO Java考试系统[0/2]
-SCHEDULED: <2020-06-10 Wed> DEADLINE: <2020-06-21 Sun>
-** TODO 系统
-** TODO 论文
