--- a/org/2020-07-02-java-collection.org
+++ b/org/2020-07-02-java-collection.org
@@ -24,13 +24,17 @@ modCount++
 ** 删除
 ** 遍历
 * HashMap
-1.8之后不只是数组加链表，可以是链表或者红黑树
-初始容量16，负载因子0.75
 ** hash处理
 拿到hashcode后，经过移位和异或运算，生成hash值
 ** 插入
 ** 扩容机制
-每次扩两倍，然后进行重排
+1. 在最开始空的时候调用默认值1<<4进行空间开辟
+2. 之后，当到达阈值时，每次扩容为最小的2的n次幂，大于元素总数，然后进行重排
 ** 序列化
+** trick
+1. 1.7及之前是经典的哈希表实现，1.8开始改为桶+链表/红黑树
+2. 1.7 hash实现不良
+3. 桶大小必须为2^n原因为，作取模时，使用了位运算
+4. 1.8 hash实现为取得hashCode之后，将高位部分和低位部分进行异或
 * LinkedHashMap
 * TreeMap
